--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,9 +6,7 @@
             <div class="flex flex-row justify-center items-center">
                 <div>
                     <a href="{% url 'home:index' %}">
-                        <img src="{% static 'img/logo.svg' %}"
-                             alt="logo"
-                             class="mx-4 md:mx-0"/>
+                        <img src="{% static 'img/logo.svg' %}" alt="logo" class="mx-4 md:mx-0"/>
                     </a>
                 </div>
                 <div>
@@ -17,10 +15,11 @@
             </div>
             <!-- links section -->
             <div class="hidden flex-row items-center space-x-4 md:flex md:text-2xl">
-                <a href="{% url 'home:index' %}" class="link">Home</a>
-                <a href="{% url 'courses:all_courses' %}" class="link">Cursos</a>
-                <a href="{% url 'professors:all_professors' %}" class="link">Profesores</a>
-                <a href="#" class="link">Confesiones</a>
+                <a href="{% url 'home:index' %}" class="hover:text-indigo-300">Home</a>
+                <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
+                <a href="{% url 'professors:all_professors' %}"
+                   class="hover:text-indigo-300">Profesores</a>
+                <a href="#" class="hover:text-indigo-300">Confesiones</a>
             </div>
             <!-- hamburguer menu -->
             <div class="p-4 space-y-2 mr-2 md:hidden" id="mobile-hamburger">
@@ -32,10 +31,11 @@
         <!-- mobile menu -->
         <div class="hidden p-3 md:hidden" id="mobile-menu">
             <div class="flex flex-col items-center space-y-4 text-xl bg-gray-50 bg-blur rounded-lg text-gray-700">
-                <a href="{% url 'home:index' %}" class="link">Home</a>
-                <a href="{% url 'courses:all_courses' %}" class="link">Cursos</a>
-                <a href="{% url 'professors:all_professors' %}" class="link">Profesores</a>
-                <a href="#" class="link">Confesiones</a>
+                <a href="{% url 'home:index' %}" class="hover:text-indigo-300">Home</a>
+                <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
+                <a href="{% url 'professors:all_professors' %}"
+                   class="hover:text-indigo-300">Profesores</a>
+                <a href="#" class="hover:text-indigo-300">Confesiones</a>
                 <!-- a line delimiting the end of the menu -->
                 <div class="w-full h-0.5 bg-gray-700"></div>
             </div>
@@ -56,10 +56,10 @@
             </div>
             <!-- links section -->
             <div class="hidden flex-row justify-center items-center space-x-4 text-xl text-gray-700 md:flex">
-                <a href="{% url 'home:index' %}" class="link">Home</a>
-                <a href="{% url 'courses:all_courses' %}" class="link">Cursos</a>
-                <a href="{% url 'professors:all_professors' %}" class="link">Profesores</a>
-                <a href="#" class="link">Confesiones</a>
+                <a href="{% url 'home:index' %}" class="hover:text-indigo-300">Home</a>
+                <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
+                <a href="{% url 'professors:all_professors' %}" class="hover:text-indigo-300">Profesores</a>
+                <a href="#" class="hover:text-indigo-300">Confesiones</a>
             </div>
             <!-- login or signin -->
             <div class="hidden flex-row justify-center items-center space-x-4 text-md md:flex">
@@ -78,10 +78,10 @@
         <!-- mobile menu -->
         <div class="hidden p-3 md:hidden" id="mobile-menu">
             <div class="flex flex-col items-center space-y-4 text-xl bg-gray-50 bg-blur rounded-lg text-gray-700">
-                <a href="{% url 'home:index' %}" class="link">Home</a>
-                <a href="{% url 'courses:all_courses' %}" class="link">Cursos</a>
-                <a href="{% url 'professors:all_professors' %}" class="link">Profesores</a>
-                <a href="#" class="link">Confesiones</a>
+                <a href="{% url 'home:index' %}" class="hover:text-indigo-300">Home</a>
+                <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
+                <a href="{% url 'professors:all_professors' %}" class="hover:text-indigo-300">Profesores</a>
+                <a href="#" class="hover:text-indigo-300">Confesiones</a>
                 <!-- login buttons -->
                 <div class="flex flex-row justify-center items-center space-x-4 text-xl">
                     <a href="{% url 'accounts:login' %}"
