--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -15,42 +15,27 @@
                  src="{% static 'img/upr_logo.jpg' %}"
                  alt="University logo">
         </div>
-        <!-- Card body (Statistics)-->
-        <div class="flex flex-row items-center justify-center w-1/3 mt-4">
-            <div class="flex flex-col items-center justify-center w-1/3">
-                <h1 class="text-2xl font-bold text-gray-800">Courses</h1>
-                <h1 class="text-2xl font-bold text-gray-800">0</h1>
-            </div>
-            <div class="flex flex-col items-center justify-center w-1/3">
-                <h1 class="text-2xl font-bold text-gray-800">Reviews</h1>
-                <h1 class="text-2xl font-bold text-gray-800">0</h1>
-            </div>
-            <div class="flex flex-col items-center justify-center w-1/3">
-                <h1 class="text-2xl font-bold text-gray-800">Comments</h1>
-                <h1 class="text-2xl font-bold text-gray-800">0</h1>
-            </div>
-        </div>
         <!-- Average Statistics -->
-        <div class="flex flex-row items-center justify-between w-1/2 p-4 mt-8 rounded-xl bg-gray-100 ">
+        <div class="flex flex-col items-center justify-between w-1/2 p-4 mt-8 rounded-xl border border-gray-200 shadow-md md:flex-row">
             <!-- averages -->
-            <div class="flex flex-col items-center justify-center w-1/3">
-                <h1 class="text-2xl font-bold text-gray-800">Difficulty</h1>
-                <h1 class="text-2xl font-bold text-gray-800">A</h1>
+            <div class="flex flex-row items-center justify-center w-1/3 md:flex-col">
+                <h1 class="text-2xl font-bold text-gray-800">Dificultad</h1>
+                <h1 class="text-2xl font-bold text-gray-800">{{professor.difficulty}}</h1>
             </div>
             <!-- difficulty -->
-            <div class="flex flex-col items-center justify-center w-1/3">
-                <h1 class="text-2xl font-bold text-gray-800">Grade</h1>
-                <h1 class="text-2xl font-bold text-gray-800">B</h1>
+            <div class="flex flex-row items-center justify-center w-1/3 md:flex-col">
+                <h1 class="text-2xl font-bold text-gray-800">Nota</h1>
+                <h1 class="text-2xl font-bold text-gray-800">{{professor.grade}}</h1>
             </div>
             <!-- workload -->
-            <div class="flex flex-col items-center justify-center w-1/3">
-                <h1 class="text-2xl font-bold text-gray-800">Organized</h1>
-                <h1 class="text-2xl font-bold text-gray-800">No</h1>
+            <div class="flex flex-row items-center justify-center w-1/3 md:flex-col">
+                <h1 class="text-2xl font-bold text-gray-800">Oraganizado</h1>
+                <h1 class="text-2xl font-bold text-gray-800">{{professor.organized}}</h1>
             </div>
             <!-- pro student -->
-            <div class="flex flex-col items-center justify-center w-1/3">
-                <h1 class="text-2xl font-bold text-gray-800">Pro Student</h1>
-                <h1 class="text-2xl font-bold text-gray-800">Sí</h1>
+            <div class="flex flex-row items-center justify-center w-1/3 md:flex-col">
+                <h1 class="text-2xl font-bold text-gray-800">Pro estudiante</h1>
+                <h1 class="text-2xl font-bold text-gray-800">{{professor.pro_student}}</h1>
             </div>
         </div>
     </section>
@@ -58,12 +43,12 @@
     <section class="flex flex-col justify-center items-center mt-12">
         <!-- header -->
         <div>
-            <h1 class="text-3xl font-bold text-gray-800">Courses</h1>
+            <h1 class="text-3xl font-bold text-gray-800">Cursos</h1>
         </div>
         <!-- courses -->
-        <div class="flex flex-row justify-center items-center">
+        <div class="flex flex-row justify-center items-center w-3/4 flex-wrap">
             {% for course in courses %}
-                <div class="flex toggle course flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200 md:hover:bg-gray-200 md:w-3/12 md:hover:animate-bounce"
+                <div class="flex toggle course flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200  md:w-3/12 md:hover:animate-pulse"
                      data-college="{{ course.college }}"
                      data-faculty="{{ course.faculty }}"
                      data-name="{{ course.name }}">
@@ -72,7 +57,6 @@
                         <div class="flex flex-col space-x-1 items-start md:text-2xl">
                             <p class="font-bold text-gray-900">{{ course.name }}</p>
                         </div>
-                        <!-- diving line -->
                         <!-- body -->
                         <div class="flex flex-col justify-start items-start md:text-md">
                             <p class="flex flex-row">
@@ -95,33 +79,24 @@
     </section>
     <!-- Comments section -->
     <section class="flex flex-col justify-center items-center mt-12">
-        <!-- header -->
         <div>
-            <h1 class="text-3xl font-bold text-gray-800">Comments</h1>
+            <h1 class="text-3xl font-bold text-gray-800">Comentarios</h1>
         </div>
-        <!-- comments -->
-        {% for comment in comments %}
-            <div class="flex flex-col justify-center items-center w-1/2 p-4 mt-8 rounded-xl bg-gray-100 ">
-                <div class="flex flex-row justify-between items-center w-full">
-                    <div class="flex flex-row items-center">
-                        <h1 class="text-2xl font-bold text-gray-800 ml-2">{{ comment.user }}</h1>
+        <div class="flex flex-col justify-center items-center">
+            {% for comment in comments %}
+                <div class="flex flex-col my-6 w-3/4 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl md:hover:animate-pulse">
+                    <div class="flex justify-between">
+                        <p class="text-2xl font-bold text-gray-900">{{ comment.user }}</p>
+                        <p class="text-2xl font-bold text-gray-900">
+                            {{ comment.time_since_str }}
+                        </p>
                     </div>
-                    <div class="flex flex-row items-center">
-                        <h1 class="text-2xl font-bold text-gray-800">
-                            {{ comment.updated_at }}
-                        </h1>
-                    </div>
-                </div>
-                <div class="flex flex-row justify-between items-center w-full mt-4">
-                    <div class="flex flex-row items-center">
-                        <h1 class="text-2xl font-bold text-gray-800">
+                    <div>
+                        <p class="text-lg text-gray-800">
                             {{ comment.text }}
-                        </h1>
+                        </p>
                     </div>
-                </div>
-                <div class="flex flex-row justify-around">
-                    <!-- likes and disklikes -->
-                    <div class="flex flex-row">
+                    <div class="flex justify-end items-end">
                         <div class="flex flex-row items-center">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 20 20"
@@ -145,28 +120,8 @@
                             </p>
                         </div>
                     </div>
-                    <!-- comments -->
-                    <div class="flex flex-row items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg"
-                             viewBox="0 0 20 20"
-                             fill="currentColor"
-                             class="w-5 h-5 mr-1">
-                            <path fill-rule="evenodd" d="M3.43 2.524A41.29 41.29 0 0110 2c2.236 0 4.43.18 6.57.524 1.437.231 2.43 1.49 2.43 2.902v5.148c0 1.413-.993 2.67-2.43 2.902a41.102 41.102 0 01-3.55.414c-.28.02-.521.18-.643.413l-1.712 3.293a.75.75 0 01-1.33 0l-1.713-3.293a.783.783 0 00-.642-.413 41.108 41.108 0 01-3.55-.414C1.993 13.245 1 11.986 1 10.574V5.426c0-1.413.993-2.67 2.43-2.902z" clip-rule="evenodd" />
-                        </svg>
-                        <p class="text-gray-600">
-                            {{ comment.num_comments }}
-                        </p>
-                    </div>
-                    <!-- share -->
-                    <div class="flex flex-row items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg"
-                             viewBox="0 0 20 20"
-                             fill="currentColor"
-                             class="w-5 h-5">
-                            <path d="M13 4.5a2.5 2.5 0 11.702 1.737L6.97 9.604a2.518 2.518 0 010 .792l6.733 3.367a2.5 2.5 0 11-.671 1.341l-6.733-3.367a2.5 2.5 0 110-3.475l6.733-3.366A2.52 2.52 0 0113 4.5z" />
-                        </svg>
-                    </div>
                 </div>
-            </div>
-        {% endfor %}
-    {% endblock %}
+            {% endfor %}
+        </div>
+    </section>
+{% endblock %}
