--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -58,7 +58,8 @@
             <div class="hidden flex-row justify-center items-center space-x-4 text-xl text-gray-700 md:flex">
                 <a href="{% url 'home:index' %}" class="hover:text-indigo-300">Home</a>
                 <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
-                <a href="{% url 'professors:all_professors' %}" class="hover:text-indigo-300">Profesores</a>
+                <a href="{% url 'professors:all_professors' %}"
+                   class="hover:text-indigo-300">Profesores</a>
                 <a href="#" class="hover:text-indigo-300">Confesiones</a>
             </div>
             <!-- login or signin -->
@@ -80,7 +81,8 @@
             <div class="flex flex-col items-center space-y-4 text-xl bg-gray-50 bg-blur rounded-lg text-gray-700">
                 <a href="{% url 'home:index' %}" class="hover:text-indigo-300">Home</a>
                 <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
-                <a href="{% url 'professors:all_professors' %}" class="hover:text-indigo-300">Profesores</a>
+                <a href="{% url 'professors:all_professors' %}"
+                   class="hover:text-indigo-300">Profesores</a>
                 <a href="#" class="hover:text-indigo-300">Confesiones</a>
                 <!-- login buttons -->
                 <div class="flex flex-row justify-center items-center space-x-4 text-xl">
