--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -45,91 +45,139 @@
                 </div>
                 <!-- pro student -->
                 <div class="flex flex-row items-center justify-center  md:flex-col">
-                    <h2 class="hidden md:block text-2xl font-bold text-gray-800"">Pro estudiante
-                    </h2> <h2 class="hidden md:block text-2xl font-bold text-gray-800"">
-                    {{ professor.pro_student }}
-                </h2>
-                <h2 class="text-lg font-bold text-gray-800 md:hidden">Pro estudiante: {{ professor.pro_student }}</h2>
+                    <h2 class="hidden md:block text-2xl font-bold text-gray-800"">
+                        Pro estudiante
+                    </h2>
+                    <h2 class="hidden md:block text-2xl font-bold text-gray-800"">
+                        {{ professor.pro_student }}
+                    </h2>
+                    <h2 class="text-lg font-bold text-gray-800 md:hidden">Pro estudiante: {{ professor.pro_student }}</h2>
+                </div>
             </div>
         </div>
-    </div>
-</section>
-<!-- Courses by this professor -->
-<section class="flex flex-col justify-center items-center mt-12">
-    <!-- header -->
-    <div>
-        <h1 class="text-3xl font-bold text-gray-800">Cursos</h1>
-    </div>
-    <!-- courses -->
-    <div class="flex flex-row justify-center items-center w-3/4 flex-wrap">
-        {% for course in courses %}
-            <div class="flex toggle course flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200  md:w-3/12 md:hover:animate-pulse"
-                 data-college="{{ course.college }}"
-                 data-faculty="{{ course.faculty }}"
-                 data-name="{{ course.name }}">
-                <a href="{% url 'courses:specific_course' course.pk %}"
-                   class="space-y-2">
-                    <!-- header -->
-                    <div class="flex flex-col space-x-1 items-start md:text-2xl">
-                        <p class="font-bold text-gray-900">{{ course.name }}</p>
-                    </div>
-                    <!-- body -->
-                    <div class="flex flex-col justify-start items-start md:text-md">
-                        <p class="flex flex-row">
-                            <span class="font-bold text-gray-700">Universidad:</span> <span class="text-gray-600">{{ course.college }}</span>
-                            <img src="{% static 'img/upr_logo.jpg' %}"
-                                 alt=""
-                                 class="ml-1 w-5 h-5 rounded-full">
-                        </p>
-                        <p>
-                            <span class="font-bold text-gray-700">Facultad:</span> <span class="text-gray-600">{{ course.faculty }}</span>
-                        </p>
-                        <p>
-                            <span class="font-bold text-gray-700">Codificación:</span> <span class="text-gray-600">{{ course.codification }}</span>
-                        </p>
-                    </div>
-                </a>
-            </div>
-        {% endfor %}
-    </div>
-</section>
-<!-- Comments section -->
-<section class="flex flex-col justify-center items-center mt-12">
-    <div>
-        <h1 class="text-3xl font-bold text-gray-800">Comentarios</h1>
-    </div>
-    <div class="flex flex-col justify-center items-center">
-        {% for comment in comments %}
-            <div class="flex flex-col my-6 w-3/4 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl md:hover:animate-pulse">
-                <div class="flex justify-between">
-                    <p class="text-2xl font-bold text-gray-900">{{ comment.user }}</p>
-                    <p class="text-2xl font-bold text-gray-900">{{ comment.time_since_str }}</p>
+    </section>
+    <!-- Courses by this professor -->
+    <section class="flex flex-col justify-center items-center mt-12">
+        <!-- header -->
+        <div class="flex flex-row">
+            <h1 class="text-3xl font-bold text-gray-800">Cursos</h1>
+            <button class="flex flex-row items-center justify-center ml-1 px-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500"
+                    id="toggle-course-form">
+                <p class="text-lg font-bold text-white">+</p>
+            </button>
+        </div>
+        <!-- courses -->
+        <div class="flex flex-row justify-center items-center w-3/4 flex-wrap">
+            {% for course in courses %}
+                <div class="flex toggle course flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200  md:w-3/12 md:hover:animate-pulse"
+                     data-college="{{ course.college }}"
+                     data-faculty="{{ course.faculty }}"
+                     data-name="{{ course.name }}">
+                    <a href="{% url 'courses:specific_course' course.pk %}"
+                       class="space-y-2">
+                        <!-- header -->
+                        <div class="flex flex-col space-x-1 items-start md:text-2xl">
+                            <p class="font-bold text-gray-900">{{ course.name }}</p>
+                        </div>
+                        <!-- body -->
+                        <div class="flex flex-col justify-start items-start md:text-md">
+                            <p class="flex flex-row">
+                                <span class="font-bold text-gray-700">Universidad:</span> <span class="text-gray-600">{{ course.college }}</span>
+                                <img src="{% static 'img/upr_logo.jpg' %}"
+                                     alt=""
+                                     class="ml-1 w-5 h-5 rounded-full">
+                            </p>
+                            <p>
+                                <span class="font-bold text-gray-700">Facultad:</span> <span class="text-gray-600">{{ course.faculty }}</span>
+                            </p>
+                            <p>
+                                <span class="font-bold text-gray-700">Codificación:</span> <span class="text-gray-600">{{ course.codification }}</span>
+                            </p>
+                        </div>
+                    </a>
                 </div>
-                <div>
-                    <p class="text-lg text-gray-800">{{ comment.text }}</p>
+            {% endfor %}
+            {% if courses|length == 0 %}
+                <div class="flex flex-col justify-center items-center w-3/4">
+                    <p class="text-gray-400">No hay cursos disponibles</p>
                 </div>
-                <div class="flex justify-end items-end">
-                    <div class="flex flex-row items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg"
-                             viewBox="0 0 20 20"
-                             fill="currentColor"
-                             class="w-5 h-5">
-                            <path fill-rule="evenodd" d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z" clip-rule="evenodd" />
-                        </svg>
-                        <p class="text-red-600">{{ comment.upvotes }}</p>
+            {% endif %}
+        </div>
+    </section>
+    <!-- Comments section -->
+    <section class="flex flex-col justify-center items-center mt-12">
+        <div class="flex flex-row">
+            <h1 class="text-3xl font-bold text-gray-800">Comentarios</h1>
+            <button class="flex flex-row items-center justify-center ml-1 px-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500 text-lg font-bold text-white"
+                    id="toggle-comment-form">
+                <p class="">+</p>
+            </button>
+        </div>
+        <form action="" method="post" class="hidden flex-col justify-center items-center mt-4 md:w-1/3" id="comment-form">
+            {% csrf_token %}
+            <label for="comment" class="sr-only">Comentario</label>
+            <textarea name="comment"
+                      id="comment"
+                      cols="30"
+                      rows="10"
+                      class="w-3/4 p-2 rounded-md shadow-md border border-gray-200"></textarea>
+            <button type="submit"
+                    class="flex flex-row items-center justify-center px-2 mt-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500">
+                <p class="text-lg font-bold text-white">Enviar</p>
+            </button>
+        </form>
+        <div class="flex flex-col justify-center items-center">
+            {% for comment in comments %}
+                <div class="flex flex-col my-6 w-3/4 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl md:hover:animate-pulse">
+                    <div class="flex justify-between">
+                        <p class="text-2xl font-bold text-gray-900">
+                            {{ comment.user }}
+                        </p>
+                        <p class="text-2xl font-bold text-gray-900">
+                            {{ comment.time_since_str }}
+                        </p>
                     </div>
-                    <div class="flex flex-row items-center ml-4">
-                        <svg xmlns="http://www.w3.org/2000/svg"
-                             viewBox="0 0 20 20"
-                             fill="currentColor"
-                             class="w-5 h-5">
-                            <path fill-rule="evenodd" d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z" clip-rule="evenodd" />
-                        </svg>
-                        <p class="text-indigo-600">{{ comment.downvotes }}</p>
+                    <div>
+                        <p class="text-lg text-gray-800">
+                            {{ comment.text }}
+                        </p>
+                    </div>
+                    <div class="flex justify-end items-end">
+                        <div class="flex flex-row items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 viewBox="0 0 20 20"
+                                 fill="currentColor"
+                                 class="w-5 h-5">
+                                <path fill-rule="evenodd" d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z" clip-rule="evenodd" />
+                            </svg>
+                            <p class="text-red-600">
+                                {{ comment.upvotes }}
+                            </p>
+                        </div>
+                        <div class="flex flex-row items-center ml-4">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 viewBox="0 0 20 20"
+                                 fill="currentColor"
+                                 class="w-5 h-5">
+                                <path fill-rule="evenodd" d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z" clip-rule="evenodd" />
+                            </svg>
+                            <p class="text-indigo-600">
+                                {{ comment.downvotes }}
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
-    </div>
-</section>
+            {% endfor %}
+            {% if comments|length == 0 %}
+                <div class="flex flex-col justify-center items-center w-3/4">
+                    <p class="text-gray-400 text-center">
+                        No hay comentarios disponibles
+                    </p>
+                </div>
+            {% endif %}
+        </div>
+    </section>
+{% endblock %}
+{% block scripts %}
+<script src="{% static 'js/toggles.js' %}"></script>
 {% endblock %}
