--- a/professors/templates/create_professor.html
+++ b/professors/templates/create_professor.html
@@ -1,13 +1,71 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
-    {% load crispy_forms_filters %}
-    {% load crispy_forms_tags %}
-    <div class="container">
-        <h2>Create Professor</h2>
-        <form method="post">
-            {% csrf_token %} {{ form|crispy }}
-            <button class="btn btn-dark" type="submit">Create</button>
-            {% if error %}<p class="error">{{ error }}</p>{% endif %}
-        </form>
+    <!-- centralized container -->
+    <div class="container mt-8 py-12 mx-auto md:w-1/3 md:bg-gray-100 rounded-xl">
+        <div class="flex flex-col items-center justify-cente p-4">
+            <h1 class="text-3xl font-bold text-gray-600 mt-4">Añadir Profesor</h1>
+        </div>
+        <!-- Login with email -->
+        <div class="flex flex-col items-center justify-center  p-4">
+            <h1 class="text-3xl font-bold text-gray-600 mt-4">Datos</h1>
+            <!-- Login form -->
+            <form action="{% url 'professors:create_professor' %}"
+                  method="POST"
+                  class="flex flex-col items-center justify-center space-y-4 mt-4">
+                {% csrf_token %}
+                <div class="flex flex-col items-center justify-center space-y-2">
+                    <label for="first_name" class="text-xl font-bold text-gray-600">Nombre</label>
+                    <input type="text"
+                           name="first_name"
+                           id="first_name"
+                           class="w-96 h-10 rounded-xl border-2 border-gray-300 focus:border-indigo-600 focus:outline-none px-4"/>
+                </div>
+                <div class="flex flex-col items-center justify-center space-y-2">
+                    <label for="last_name" class="text-xl font-bold text-gray-600">Apellidos</label>
+                    <input type="last_name"
+                           name="last_name"
+                           id="last_name"
+                           class="w-96 h-10 rounded-xl border-2 border-gray-300 focus:border-indigo-600 focus:outline-none px-4"/>
+                </div>
+                <div class="flex flex-col items-center justify-center space-y-2">
+                    <label for="college" class="text-xl font-bold text-gray-600">Universidad</label>
+                    <select name="college"
+                            id="college"
+                            class="w-96 h-10 rounded-xl border-2 border-gray-300 focus:border-indigo-600 focus:outline-none px-4">
+                        {% for college in universities %}
+                            <option value="{{ college }}">
+                                {{ college }}
+                            </option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="flex flex-col items-center justify-center space-y-2">
+                    <label for="faculty" class="text-xl font-bold text-gray-600">Facultad</label>
+                    <select name="faculty"
+                            id="faculty"
+                            class="w-96 h-10 rounded-xl border-2 border-gray-300 focus:border-indigo-600 focus:outline-none px-4">
+                        {% for faculty in departments %}
+                            <option value="{{ faculty }}">
+                                {{ faculty }}
+                            </option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="flex flex-col items-center justify-center space-y-2">
+                    <input type="submit"
+                           value="Ingresar"
+                           class="w-96 h-10 rounded-xl bg-indigo-600 text-white font-bold text-xl"/>
+                </div>
+                <!-- Error Message -->
+                {% if error %}
+                    <div class="flex flex-col items-center justify-center space-y-2">
+                        <ul class="flex flex-col items-center justify-center space-y-2">
+                            <li class="text-red-600">{{ error }}</li>
+                        </ul>
+                    </div>
+                {% endif %}
+            </form>
+        </div>
     </div>
 {% endblock %}
