--- a/professors/templates/professor_list.html
+++ b/professors/templates/professor_list.html
@@ -13,7 +13,7 @@
         <div class="container flex flex-col md:flex-row md:flex-wrap md:mx-auto md:items-center md:justify-center">
             <!-- Section title -->
             {% for professor in professors %}
-                <div class="flex toggle flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200 md:hover:bg-gray-200 md:w-3/12 md:hover:animate-bounce"
+                <div class="flex toggle flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200 md:w-3/12 md:hover:animate-pulse"
                      data-college="{{ professor.college }}"
                      data-faculty="{{ professor.faculty }}"
                      data-name="{{ professor.first_name }} {{ professor.last_name }}">
