--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -30,7 +30,7 @@
         <div class="flex flex-col items-center justify-center  p-4>
             <h1 class="text-3xl font-bold text-gray-600 mt-4">O registrate con tu email</h1>
             <!-- Login form -->
-            <form action="{% url 'accounts:register' %}"
+            <form action="{% url 'accounts:register' %}?next={{ next }}"
                   method="POST"
                   class="flex flex-col items-center justify-center space-y-4 mt-4">
                 {% csrf_token %}
